# million-monkeys

./: Dockerfile  README.md  celeryconfig.py  dandy_settings.py  justfile  main.py  pyproject.toml  ruff.toml  run_celery_workflow.py  run_workflow.py
app/: celery.py  tasks.py
monkeys/: enums.py  fields.py  models.py  setup.py
monkeys/intelligence/: workflow.py
monkeys/intelligence/bots/: judge_bot.py  monkey_bot.py  teacher_bot.py  team_bot.py
monkeys/intelligence/intel/: judgement_intel.py  result_intel.py  team_intel.py
