[project]
name = "million-monkeys"
description = "Million Monkeys Artificial Intelligence Test"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Nathan Johnson", email = "nathanj@stratusadv.com" },
]
keywords = ["tool"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = "==3.12"

dependencies = [
    "celery==5.6.2",
    "celery-types==0.24.0",
    "dandy==1.3.5",
    "mysql-connector-python==9.0.0",
    "peewee==3.19.0",
    "python-dotenv==1.1.1",
    "ruff==0.14.13",
    "sqlalchemy==2.0.45",
]

[tool.ruff]
extend = "ruff.toml"

[tool.setuptools]
packages = ["app", "monkeys"]
#include-package-data = true
#
#[build-system]
#requires = [
#    "setuptools>=61.0",
#    "wheel"
#]
#build-backend = "setuptools.build_meta"